unpackaged/main/default/objects/Note__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <externalId>true</externalId>
    <label>Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>