unpackaged/main/default/objects/Note__c/fields/Note_ID__c.field-meta.xml
<CustomField>
    <fullName>Note_ID__c</fullName>
    <externalId>true</externalId>
    <label>Note ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>